# TikTok-Virality-Predictor

./: .gitignore  README.md  api.py  project.ipynb  pruebas.ipynb  pruebas.py  requirements.txt  test_tiktok_api.py
config/: variables.py
config/ffmpeg-master-latest-win64-gpl/doc/: ffmpeg-all.html
data/inputs/: tiktok_info.json  virality_info.csv
data/inputs/Manual_Scrapping/: notes.txt
data/inputs/texts/: 6875323773755657474_audio.txt  6875342937002085633_audio.txt  6875405441472498949_audio.txt  6875621663564680450_audio.txt  6875691073499352321_audio.txt  6875872124968439046_audio.txt  6876156631651077381_audio.txt  6876262384093236485_audio.txt  6876369534018669825_audio.txt  6876374255974501633_audio.txt  6876417380151479553_audio.txt  6876422232772578561_audio.txt  6876643374548438274_audio.txt  6876645435625262338_audio.txt  6876857501397159170_audio.txt  6877191692341054721_audio.txt  6877337975030598917_audio.txt  (+222 more)
data/outputs/: info.txt
mltools-0.1.42/: LICENSE  PKG-INFO  README.md  pyproject.toml  setup.py
mltools-0.1.42/src/mltools/: __init__.py  classification_tools.py  forecast_tools.py  model_tools.py  regression_tools.py  unsupervised_tools.py
src/audio/: audio_features.csv  audio_study.ipynb  audio_utils.py
src/image/: cnnGood.keras  image_study.ipynb  image_utils.py
src/streamlit/: app.py
src/text/: text_study.ipynb  text_utils.py
src/utils/: utils_TikTok_scrapper.py  utils_audio_extractor.py  utils_ids_counter.py  utils_json_formatting.py  utils_streamlit.py
tiktok/: pyvenv.cfg
tiktok/Scripts/: activate  activate.bat
(+1 files in other folders)
