[tool.poetry]
name = "mltools"
version = "0.1.42"
description = "Machine Learning functions aiming to help in the Machine Learning course at ICAI"
authors = ["Jaime Pizarroso"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.0"
pandas = "^2.0.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
